--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "tooyz/moysklad",
-    "description": "Get it here: https://github.com/Tooyz/moysklad",
+    "name": "EugeneGpil/moysklad",
+    "description": "Origin: https://github.com/Tooyz/moysklad. Modified: https://github.com/EugeneGpil/moysklad",
     "require": {
         "php": ">=5.6.0",
         "guzzlehttp/guzzle": "^6.2.1"
@@ -9,6 +9,10 @@
         {
             "name": "Tooyz",
             "email": "nikkoltz@mail.ru"
+        },
+        {
+            "name": "EugeneGpil",
+            "email": "gpilligrim@gmail.com"
         }
     ],
     "autoload": {
